@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-03T08:13:08Z",
+  "timestamp" : "2022-04-06T00:54:26Z",
   "count_outdated" : 235,
   "uniques_outdated" : 109,
-  "count" : 249,
-  "uniques" : 117,
+  "count" : 250,
+  "uniques" : 118,
   "clones" : [
     {
       "timestamp": "2022-03-26T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 11, 11 ],
       "uniques": 6,
       "uniques_minmax": [ 6, 6 ]
+    },
+    {
+      "timestamp": "2022-04-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
