@@ -1,6 +1,6 @@
 {
-  "count": 14,
-  "uniques": 8,
+  "count": 15,
+  "uniques": 9,
   "clones": [
     {
       "timestamp": "2022-03-26T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2022-04-03T00:00:00Z",
       "count": 11,
       "uniques": 6
+    },
+    {
+      "timestamp": "2022-04-05T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
