@@ -1,3 +1,9 @@
+2022-04-06T00:54:26Z:
+* notice: last 14d: all unq: 15 9
+* notice: prev accum: outdated-all outdated-unq / all unq: 235 109 / 249 117
+* notice: next accum: outdated-all outdated-unq / all unq: 235 109 / 250 118
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-03T08:13:08Z:
 * notice: last 14d: all unq: 14 8
 * notice: prev accum: outdated-all outdated-unq / all unq: 235 109 / 238 111
